# ChessAnalysis

./: .gitignore  .gitmodules  GameReportScreen_FINAL.md  GameReportScreen_README.md  Integration_Complete.md  README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  google-services.json  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/chessanalysis/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/github/movesense/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/www/: index.html  main.js
app/src/main/cpp/: CMakeLists.txt  StockfishJni.cpp  sflauncher.cpp
app/src/main/cpp/src/: engine_bridge.cpp  engine_bridge.h  sflauncher.cpp
app/src/main/java/com/example/chessanalysis/: AnalysisLogic.kt  App.kt  BotUtils.kt  ChessApp.kt  EngineClient.kt  GameLoaders.kt  LocalAnalysisUtils.kt  LocalAnalyzer.kt  LocalStockfish.kt  LocaleManager.kt  MainActivity.kt  Models.kt  MoveClassifier.kt  MoveClassifier.txt  PgnChess.kt  PgnToFens.kt  ReportStore.kt  Theme.kt  UIComponents.kt
app/src/main/java/com/example/chessanalysis/analysis/: ACPL.kt  Accuracy.kt  ChesskitAnalyzer.kt  EstimateElo.kt  LocalGameAnalyzer.kt  MathUtils.kt  MoveClassifier.kt  StockfishAnalyzer.kt  WinPercentage.kt
app/src/main/java/com/example/chessanalysis/data/: AnalysisMode.kt  AnalysisModeStore.kt  Api.kt  DataModels.kt  Util.kt
app/src/main/java/com/example/chessanalysis/data/api/: ApiClient.kt  ChessApiService.kt  ChessComService.kt  LichessService.kt  StockfishOnlineService.kt
app/src/main/java/com/example/chessanalysis/data/local/: AppDatabase.kt  Converters.kt  GameDao.kt  GameEntities.kt  GameRepository.kt  StatsDatabase.kt
app/src/main/java/com/example/chessanalysis/data/model/: Models.kt
app/src/main/java/com/example/chessanalysis/data/repo/: FirestoreSync.kt  StatsRepository.kt
app/src/main/java/com/example/chessanalysis/data/repository/: GameRepository.kt
app/src/main/java/com/example/chessanalysis/data/util/: BoardState.kt  MoveClassifier.kt  PGNParser.kt
app/src/main/java/com/example/chessanalysis/engine/: ChessParser.kt  Engine.kt  EngineWebView.kt  MathEval.kt  StockfishOnlineAnalyzer.kt
app/src/main/java/com/example/chessanalysis/local/: Accuracy.kt  EstimateElo.kt  LocalAnalysisUtils.kt  LocalAnalyzer.kt  LocalGameAnalyzer.kt  LocalStockfish.kt  Mathx.kt  MoveClassifier.kt  PgnTools.kt  SfLauncher.kt  WinPercentage.kt
app/src/main/java/com/example/chessanalysis/net/: AvatarApi.kt
app/src/main/java/com/example/chessanalysis/opening/: Openings.kt
app/src/main/java/com/example/chessanalysis/repository/: RepositoryViewModel.kt
app/src/main/java/com/example/chessanalysis/ui/: AppRoot.kt  Theme.kt  Type.kt  UI.kt  UserProfile.kt
app/src/main/java/com/example/chessanalysis/ui/components/: BoardCanvas.kt  BotEnginePvPanel.kt  EvalBar.kt  FenBoard.kt  Icons.kt  IconsMapping.kt  MovesCarousel.kt
app/src/main/java/com/example/chessanalysis/ui/navigation/: AppNavGraph.kt  BottomNavShared.kt  StatsNav.kt
app/src/main/java/com/example/chessanalysis/ui/screens/: 2ProfileScreen  AnalysisSummaryScreen.kt  BoardScreen.kt  BotGameScreen.kt  BotPlayScreen.kt  GameFilter.kt  GameListScreen.kt  GameReportScreen.kt  GameReportScreenPreview.kt  GameReportViewModel.kt  GamesListScreen.kt  HomeWithBottomNav.kt  LoginScreen.kt  ProfileHomeScreen.kt  ProfileScreen.kt  ReportScreen.kt  StatsScreen.kt
app/src/main/java/com/example/chessanalysis/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/example/chessanalysis/viewmodel/: AnalysisViewModel.kt  GameListViewModel.kt
app/src/main/java/com/github/movesense/: App.kt  EngineClient.kt  GameLoaders.kt  LocaleManager.kt  MainActivity.kt  Models.kt  PgnChess.kt  ReportStore.kt
app/src/main/java/com/github/movesense/analysis/: ACPL.kt  Accuracy.kt  CloudEvalCache.kt  EstimateElo.kt  LocalGameAnalyzer.kt  MathUtils.kt  MoveClassifier.kt  WinPercentage.kt
app/src/main/java/com/github/movesense/api/: LichessApiClient.kt
app/src/main/java/com/github/movesense/data/: AnalysisMode.kt  AnalysisModeStore.kt  OpeningLibrary.kt
app/src/main/java/com/github/movesense/data/local/: AppDatabase.kt  Converters.kt  GameDao.kt  GameEntities.kt  GameRepository.kt  GuestPreferences.kt
app/src/main/java/com/github/movesense/engine/: EnginePool.kt  EngineWebView.kt  StockfishBridge.kt
app/src/main/java/com/github/movesense/net/: AvatarApi.kt
app/src/main/java/com/github/movesense/subscription/: GooglePlayBillingManager.kt  RevenueCatManager.kt
app/src/main/java/com/github/movesense/ui/: AppRoot.kt  UserProfile.kt
app/src/main/java/com/github/movesense/ui/components/: BoardCanvas.kt  EvalBar.kt  IconsMapping.kt  MovesCarousel.kt  PremiumBanner.kt  RateUsDialog.kt
app/src/main/java/com/github/movesense/ui/navigation/: BottomNavShared.kt
app/src/main/java/com/github/movesense/utils/: CpuMonitor.kt
app/src/main/java/com/github/movesense/worker/: RetentionWorker.kt
app/src/main/res/mipmap-anydpi-v26/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night/values-es/: strings.xml
app/src/main/res/values-night/values-ru/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/xml/: backup_rules.xml  network_security_config.xml
app/src/test/java/com/example/chessanalysis/: ExampleUnitTest.kt
app/src/test/java/com/github/movesense/: ExampleUnitTest.kt
(+51 files in other folders)
